tests/kubernetes/custom-3.1.1/noncompliant/node.yaml
apiVersion: v1
kind: Node
metadata:
  name: noncompliant-node
  annotations:
    kubeconfig.permissions: "0666"
