tests/kubernetes/custom-3.1.1/noncompliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-3.1.1-noncompliant
policies:
  - ../../../../policies/kubernetes/worker-nodes/custom-3.1.1.yaml
resources:
  - node.yaml
results:
  - policy: custom-3-1-1-kubeconfig-permissions
    rule: check-kubeconfig-permissions
    resources:
      - noncompliant-node
    kind: Node
    result: fail
